src/styles.scss
//@import "~@angular/material/prebuilt-themes/purple-green.css";
@import 'app/app.component.scss-theme.scss';
@import 'assets/scss/variables';
@import 'assets/scss/common';

html, body {
  height: calc(100vh - $header-height);
  color: $white;
}

body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  background: #303030;
  overflow-wrap: break-word;
}

a {
  color: inherit;
  text-decoration: none;
}

button {
  transition: all .2s, background 400ms cubic-bezier(0.25, 0.8, 0.25, 1),box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1)!important;
  &:hover:not([disabled]) {
    transform: translateY(-2px);
  }
}

/* custom scrollbar */
::-webkit-scrollbar {
  width: 14px;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: $light;
  border-radius: 14px;
  border: 4px solid transparent;
  background-clip: content-box;
}

::-webkit-scrollbar-thumb:hover {
  background-color: $primary;
}

.la-pacman.la-2x > div:nth-child(2) {
  top: -20px;
}

//form {
//  display: flex;
//  flex-direction: column;
//  align-items: flex-start;
//}
.page-height {
  height: calc(100vh - $header-height);
}

input.mat-input-element, textarea.mat-input-element {
  color: white;
}

.main-content-size {
  width: 100%;
  max-width: 700px;
}

.spacer {
  flex: 1 1 auto;
  &-s {
    flex: .2 2 auto;
  }
}

